sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_2_sample_0.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridANSIStyled.render(&grid)
---
╔═══════╦═══════╗
║   │ [1m3[0m ║ [1m4[0m │   ║
║───┼───║───┼───║
║ [1m4[0m │   ║   │ [1m2[0m ║
╠═══════╬═══════╣
║ [1m1[0m │   ║   │ [1m3[0m ║
║───┼───║───┼───║
║   │ [1m2[0m ║ [1m1[0m │   ║
╚═══════╩═══════╝
