sudoku-rs/src/grid/format/snapshots/sudoku__grid__format__candidates_grid__tests__ansi_styled__snapshots__render__base_3_sample_5.snap
---
source: sudoku-rs/src/grid/format/candidates_grid.rs
expression: CandidatesGridANSIStyled.render(&grid)
---
╔═══════════╦═══════════╦═══════════╗
║ [1m9[0m │   │   ║   │ [1m8[0m │ [1m4[0m ║   │ [1m6[0m │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ [1m6[0m │   │ [1m4[0m ║   │   │ [1m5[0m ║ [1m2[0m │   │ [1m7[0m ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ [1m3[0m │   ║   │ [1m7[0m │   ║   │ [1m8[0m │   ║
╠═══════════╬═══════════╬═══════════╣
║ [1m7[0m │ [1m6[0m │   ║   │   │ [1m1[0m ║ [1m5[0m │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │ [1m5[0m │ [1m3[0m ║   │   │   ║   │   │ [1m1[0m ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │   ║ [1m4[0m │   │ [1m9[0m ║ [1m6[0m │   │ [1m3[0m ║
╠═══════════╬═══════════╬═══════════╣
║ [1m1[0m │   │ [1m5[0m ║   │ [1m2[0m │ [1m6[0m ║   │ [1m9[0m │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║   │   │ [1m2[0m ║   │ [1m4[0m │   ║   │   │   ║
║───┼───┼───║───┼───┼───║───┼───┼───║
║ [1m8[0m │   │   ║   │   │ [1m3[0m ║ [1m7[0m │ [1m1[0m │   ║
╚═══════════╩═══════════╩═══════════╝
